argocd-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: handson
  name: handson
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: handson
